--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/Ty4ka/split-helper#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.173",
     "@types/node": "^16.9.2",
     "prettier": "^2.4.1",
     "tslint": "^6.1.3",
@@ -41,6 +42,7 @@
   ],
   "dependencies": {
     "is-running-process": "^1.0.0",
+    "lodash": "^4.17.21",
     "time-helpers": "^1.0.0"
   }
 }
